--- a/frontend/src/app/ventas/sell/sell-limit-stock-error.component.html
+++ b/frontend/src/app/ventas/sell/sell-limit-stock-error.component.html
@@ -1,4 +1,8 @@
-<h1 mat-dialog-title style="text-align: center;    background-color: #ff1100;color: white;">Atención</h1>
+<div>
+  <h1 mat-dialog-title style="text-align: center; background-color: #ffd20e;color: white;">Alerta
+    <mat-icon style="position: relative; top: 4px;">warning</mat-icon>
+  </h1>
+</div>
 <div mat-dialog-content>
   <div fxLayout="row wrap">
   </div>
