--- a/frontend/src/app/ventas/amortizacion/amortizacion.component.html
+++ b/frontend/src/app/ventas/amortizacion/amortizacion.component.html
@@ -3,7 +3,7 @@
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Todas las operaciones</mat-card-title>
+        <mat-card-title>Cuentas por cobrar</mat-card-title>
 
         <div class="responsive-table">
           <div fxLayout="row wrap">    
@@ -15,6 +15,15 @@
             
             <div fxFlex.gt-sm="35" fxFlex="35" id="newSection">
               <button style="position: relative; left: -70%; top: 20%;" mat-raised-button color="primary" [disabled]="!entity" (click)="addExtraInfoSell()">Amortizar</button>
+
+              <!--<mat-form-field>-->
+                <!--<select style="position: relative; left: -70%; top: 20%;" [disabled]="!entity" (click)="addExtraInfoSell()" matNativeControl required>-->
+                  <!--<option value="Amortizar">Amortizar</option>-->
+                  <!--<option value="otra opcion">Otra opción</option>-->
+                <!--</select>-->
+              <!--</mat-form-field>-->
+
+
             </div>
           </div>
 
@@ -38,7 +47,7 @@
             </ng-container>
 
             <ng-container matColumnDef="codigo">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Venta </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef > Venta </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Venta:</span>
                 {{element.codigo}}
@@ -46,7 +55,7 @@
             </ng-container>
 
             <ng-container matColumnDef="fecha">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Fecha </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef> Fecha </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Fecha:</span>
                 {{element.fecha}}
@@ -54,7 +63,7 @@
             </ng-container>
 
             <ng-container matColumnDef="clienteNombre">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Cliente </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef> Cliente </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Cliente:</span>
                 {{element.clienteNombre}}
@@ -62,7 +71,7 @@
             </ng-container>
 
             <ng-container matColumnDef="total">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Total </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef> Total </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Total:</span>
                 S/.{{parseFloatCustom(element.montoTotal)}}
@@ -70,7 +79,7 @@
             </ng-container>
 
             <ng-container matColumnDef="amortizado">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Amortizado </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef> Amortizado </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Amortizado:</span>
                 S/.{{parseFloatCustom(getMontoAmortizado(element))}}
@@ -81,7 +90,7 @@
             </ng-container>
 
             <ng-container matColumnDef="restante">
-              <mat-header-cell *matHeaderCellDef style="font-weight: bold;"> Restante </mat-header-cell>
+              <mat-header-cell style="font-size:14px; font-weight: bold " *matHeaderCellDef> Restante </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Restante:</span>
                 S/.{{parseFloatCustom(element.montoTotal - getMontoAmortizado(element))}}
