is credit and private field

--- a/frontend/src/app/ventas/amortizacion/amortizacion-extra-info.component.html
+++ b/frontend/src/app/ventas/amortizacion/amortizacion-extra-info.component.html
@@ -116,10 +116,10 @@
               <!--S/ {{parseFloatCustom(montoTotal - amortization.montoPagado)}}-->
             <!--</th>-->
           </tr>
-          <tr *ngIf="isCredit">
-            <th scope="row">Crédito</th>
-            <th style="text-align: center; color:red; font-size: 1rem;">S/ {{data.entity.montoTotal}}</th>
-          </tr>
+          <!--<tr *ngIf="isCredit">-->
+            <!--<th scope="row">Crédito</th>-->
+            <!--<th style="text-align: center; color:red; font-size: 1rem;">S/ {{data.entity.montoTotal}}</th>-->
+          <!--</tr>-->
           </tbody>
         </table>
       </div>
